Add support for rclone config file

--- a/multibackup.conf
+++ b/multibackup.conf
@@ -5,8 +5,10 @@ timestamp=$(date +%Y%m%d)
 backup_destination="/backups"
 
 # Rclone backup destination
-
 rclone_destination="gdrive:/ServerBackups/box01/docker"
+
+# Rclone config file
+rclone_config="/home/syssu/.rclone.conf"
 
 # Folders to backup
 folders_to_backup=(
