Add ability to ping a host at end of script execution

--- a/multibackup.conf
+++ b/multibackup.conf
@@ -26,3 +26,6 @@ backup_retention="+14"
 
 # Commands that are executed after the backup is completed
  post_commands=()
+
+# URL to ping when job finishes
+ping_host=https://someUrl.com
